# rust-lambda-dynamodb

./: Cargo.toml  curl-db.sh
src/: main.rs
src/model/: item.rs
src/web/: item_handlers.rs  mod.rs  test_handlers.rs
