[package]
name = "rs-lambda-dynamo-fn"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"


simple-error = "0.3.0"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
serde_dynamo = { version = "^4.2.7", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1.33.0", features = ["macros", "full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }
aws-sdk-dynamodb = "1.4.0"
aws-config = { version = "1.0.3", features = ["behavior-version-latest"] }
axum = "0.6.9"
